2001-05-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-file-name-coding-system): New customizable value.
	(w3m-charset-coding-system-alist): Reverse list.
	(w3m-dirlist-cgi-program): Change default value for OS/2.
	(w3m-local-dirlist-cgi): Set "QUERY_STRING" to encoded string of
	'w3m-file-name-coding-system'. Insert 'Meta tag' to the binding of
	charset.
		
2001-05-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-goto-url): Set a string representing file
	interpreted as a directory to `default-directory'.
	(w3m-about-source): Call `w3m-decode-buffer'.

2001-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-buffer): Allow `detect-coding-region' to
	return both a coding-system and a list of coding-systems.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-linuxce-jp.el: New file.

	* shimbun/sb-toshiba.el: New file.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (XEmacs): Require `byte-optimize' expressly before
	advising the function `byte-optimize-form-code-walker'.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-meadow.el (shimbun-get-headers): Use
	`shimbun-expand-url' instead of `w3m-expand-url'.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-rename-url): Don't use
	`with-current-buffer' for old Emacsen.
	(w3m-history-copy): Ditto.
	(w3m-history-share-properties): Ditto.
	(w3m-history-seek-properties): Ditto.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-sponichi.el (author): Corrected.

	* shimbun/sb-meadow.el: It looks all indexes.
	(shimbun-index-url): Removed.
	(shimbun-get-headers): Removed.
	(shimbun-headers): New method.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (slow): New rule for the developers to check a
	portability for each module.
	* w3m-xmas.el (w3m-cache-unoptimized-gif-images): Fix typo.

2001-05-27  Yuuichi Teranishi  <teranisi@gohome.org>
